--- a/cookbooks/apache2/templates/default/apache2.conf.erb
+++ b/cookbooks/apache2/templates/default/apache2.conf.erb
@@ -10,6 +10,8 @@ ServerRoot "<%= node[:apache][:dir] %>"
 #
 <% if node[:platform] == "debian" || node[:platform] == "ubuntu" -%>
 LockFile /var/lock/apache2/accept.lock
+<% elsif node[:platform] == "freebsd" -%>
+LockFile /var/log/accept.lock
 <% else %>
 LockFile logs/accept.lock
 <% end -%>
@@ -18,15 +20,7 @@ LockFile logs/accept.lock
 # PidFile: The file in which the server should record its process
 # identification number when it starts.
 #
-<% if node[:platform] == "debian" || node[:platform] == "ubuntu" -%>
-PidFile /var/run/apache2.pid
-<% elsif node[:platform] == "centos" || node[:platform] == "redhat" || node[:platform] == "fedora" -%>
-PidFile /var/run/httpd.pid
-<% elsif node[:platform] == "arch" -%>
-PidFile /var/run/httpd/httpd.pid
-<% else -%>
-PidFile logs/httpd.pid
-<% end -%>
+PidFile <%= node[:apache][:pid_file] %>
 
 #
 # Timeout: The number of seconds before receives and sends time out.
@@ -88,7 +82,7 @@ KeepAliveTimeout <%= node[:apache][:keepalivetimeout] %>
 </IfModule>
 
 User <%= node[:apache][:user] %>
-Group <%= node[:apache][:user] %>
+Group <%= node[:apache][:group] %>
 
 #
 # AccessFileName: The name of the file to look for in each directory
@@ -135,7 +129,7 @@ HostnameLookups Off
 # logged here.  If you *do* define an error logfile for a <VirtualHost>
 # container, that host's errors will be logged there and not here.
 #
-ErrorLog <%= node[:apache][:log_dir] %>/error.log 
+ErrorLog <%= node[:apache][:log_dir] %>/<%= node[:apache][:error_log] %>
 
 #
 # LogLevel: Control the number of messages logged to the error_log.
@@ -144,9 +138,19 @@ ErrorLog <%= node[:apache][:log_dir] %>/error.log
 #
 LogLevel warn
 
+# COOK-1021: Dummy LoadModule directive to aid module installations
+#LoadModule dummy_module modules/mod_dummy.so
+
 # Include module configuration:
 Include <%= node[:apache][:dir] %>/mods-enabled/*.load
 Include <%= node[:apache][:dir] %>/mods-enabled/*.conf
+
+<% if node[:platform] == "freebsd" -%>
+<IfDefine NOHTTPACCEPT>
+   AcceptFilter http none
+   AcceptFilter https none
+</IfDefine>
+<% end %>
 
 # Include ports listing
 Include <%= node[:apache][:dir] %>/ports.conf
@@ -155,6 +159,7 @@ Include <%= node[:apache][:dir] %>/ports.conf
 # The following directives define some format nicknames for use with
 # a CustomLog directive (see below).
 #
+LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
 LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
 LogFormat "%h %l %u %t \"%r\" %>s %b" common
 LogFormat "%{Referer}i -> %U" referer
