postfix and apache servername fixes
* gives option to switch email package install from postfix to sendmail.
  Set to nil to skip email package installation entirely.
* adds ServerName to graylog2 apache site file, filled in from
  attribute.  For named virtual hosts.  Defaults to 'graylog2'

--- a/cookbooks/graylog2/templates/default/graylog2.apache2.erb
+++ b/cookbooks/graylog2/templates/default/graylog2.apache2.erb
@@ -3,6 +3,7 @@
 #
 
 <VirtualHost *:80>
+  ServerName <%= node.graylog2.server_name %>
   DocumentRoot <%= node.graylog2.basedir %>/web/public
   <Directory <%= node.graylog2.basedir %>/web/public>
     Allow from all
