--- a/templates/default/mongoid.yml.erb
+++ b/templates/default/mongoid.yml.erb
@@ -1,5 +1,6 @@
 production:
   host: <%= node.graylog2.mongodb.host %>
+  port: <%= node.graylog2.mongodb.port %>
   database: <%= node.graylog2.mongodb.database %>
 <% if node.graylog2.mongodb.auth == "true" -%>
   username: <%= node.graylog2.mongodb.user %>
